# asic_simulator

./: .gitignore  main.py  pyproject.toml  requirements.txt
asic_simulator/: settings.py
asic_simulator/backend/: __init__.py
asic_simulator/backend/data/: __init__.py  boards.py  fans.py  hashrate.py  miner.py  pools.py
asic_simulator/log/: __init__.py
asic_simulator/simulators/: __init__.py
asic_simulator/simulators/antminer/: __init__.py  rpc.py  web.py
asic_simulator/simulators/antminer/web_files/: 404.html  blog.html  dashboard.html  index.html  ip.html  list.html  miner.html  pwd.html  update.html
asic_simulator/simulators/antminer/web_files/i18n/: strings_en.properties  strings_zh.properties
asic_simulator/simulators/antminer/web_files/js/: axios.min.js  blog.js  dashboard.js  e404.js  echarts.min.js  index.js  ip.js  list.js  miner.js  pwd.js  reader.js  update.js
asic_simulator/simulators/whatsminer/: __init__.py  rpc.py  web.py
asic_simulator/simulators/whatsminer/web_files/: luci.html
asic_simulator/ssl/: self-signed.priv.pem  self-signed.pub.pem
